# eip_123_ddk

./: Makefile  WARNING
ltq_eip123_user_library_gpl/: Makefile.am  bootstrap.sh  configure.ac
ltq_eip123_user_library_gpl/CAL/CAL_API/incl/: list.mk  sfzcryptoapi.h  sfzcryptoapi_asset.h  sfzcryptoapi_asym.h  sfzcryptoapi_aunlock.h  sfzcryptoapi_buffers.h  sfzcryptoapi_cprm.h  sfzcryptoapi_enum.h  sfzcryptoapi_init.h  sfzcryptoapi_misc.h  sfzcryptoapi_rand.h  sfzcryptoapi_result.h  sfzcryptoapi_sym.h
ltq_eip123_user_library_gpl/CAL/CAL_CM-v2/src/: c_cal_cm-v2.h  cal_cm-v2_aesdes.c  cal_cm-v2_aesf8.c  cal_cm-v2_arc4.c  cal_cm-v2_asset.c  cal_cm-v2_aunlock.c  cal_cm-v2_c2.c  cal_cm-v2_camellia.c  cal_cm-v2_cmac.c  cal_cm-v2_dma.c  cal_cm-v2_dma.h  cal_cm-v2_featurematrix_amend.c  cal_cm-v2_hash.c  cal_cm-v2_hmac.c  cal_cm-v2_init.c  cal_cm-v2_internal.h  cal_cm-v2_multi2.c  cal_cm-v2_nop.c  cal_cm-v2_nvm.c  cal_cm-v2_random.c  cal_cm-v2_random_selftest.c  cal_cm-v2_read_version.c  cal_cm-v2_symm_crypto.c  cal_cm-v2_tokenexchange.c
ltq_eip123_user_library_gpl/CAL/CAL_CONTEXT/incl/: list.mk  sfzcrypto_context.h
ltq_eip123_user_library_gpl/CAL/CAL_CONTEXT/src/: list.mk  sfzcrypto_context.c
ltq_eip123_user_library_gpl/CAL/CAL_DISPATCHER/incl/: cal_cm.h  cal_pk.h  cal_sw.h  list.mk
ltq_eip123_user_library_gpl/CAL/CAL_DISPATCHER/src/: cal_dispatcher.c  list.mk
ltq_eip123_user_library_gpl/CAL/CAL_HW/incl/: cal_hw_api.h
ltq_eip123_user_library_gpl/CAL/CAL_HW/src/: c_cal_hw.h  cal_hw_init_cm-custom.c  cal_hw_init_cm-fpga.c  cal_hw_v2.c
ltq_eip123_user_library_gpl/Config/: cf_cal.h  cf_cal_cm-v2.h  cf_impldefs.h  cfg_spal.h  cs_cal_cm-v2.h  cs_cal_hw.h  cs_caltest.h  cs_cm_tokens.h  cs_dftest.h  cs_eip123.h  cs_eip201.h  cs_hwpal_umdevxs.h  cs_intdispatch_umdevxs.h  cs_umdevxsproxy.h
ltq_eip123_user_library_gpl/Framework/CLIB/incl/: c_lib.h  list.mk
ltq_eip123_user_library_gpl/Framework/CLIB/src/: c_lib.c  list.mk
ltq_eip123_user_library_gpl/Framework/DEBUG/src/: debug_abort.c  debug_printf.c  list.mk
ltq_eip123_user_library_gpl/Framework/EE_ID_API/incl/: ee_id.h  list.mk
ltq_eip123_user_library_gpl/Framework/EE_ID_GENERIC/src/: ee_id_cmp.c  ee_id_generic.c  ee_id_local.c  list.mk
ltq_eip123_user_library_gpl/Framework/IMPLDEFS/incl/: implementation_defs.h  list.mk
ltq_eip123_user_library_gpl/Framework/PUBDEFS/incl/: list.mk  public_defs.h
ltq_eip123_user_library_gpl/Framework/SPAL_API/incl/: list.mk  spal_memory.h  spal_mutex.h  spal_result.h  spal_semaphore.h  spal_sleep.h  spal_thread.h
ltq_eip123_user_library_gpl/Framework/SPAL_MEMORY_ANSI/src/: list.mk  spal_memory_ansi.c
ltq_eip123_user_library_gpl/Framework/SPAL_POSIX/src/: list.mk  spal_posix_mutex.c  spal_posix_semaphore.c  spal_posix_semaphore_debug.c  spal_posix_sleep.c  spal_posix_thread.c
ltq_eip123_user_library_gpl/Framework/SPAL_WOE/src/: list.mk  spal_woe_mutex.c  spal_woe_semaphore.c  spal_woe_sleep.c  spal_woe_thread.c
ltq_eip123_user_library_gpl/Integration/DMARes_Record/incl/: dmares_record.h
ltq_eip123_user_library_gpl/Integration/DriverFramework_v4_impl/src/: c_hwpal_device_umdevxs.h  c_hwpal_dmares_umdevxs.h  cs_dftest_umdevxs.h  hwpal_device_umdevxs.c  hwpal_dmares_addr_cm_fpga.c  hwpal_dmares_umdevxs.c
ltq_eip123_user_library_gpl/Integration/Identities/incl/: identities.h
ltq_eip123_user_library_gpl/Integration/Identities/src/: identities_ee_id.c  identities_stub.c
ltq_eip123_user_library_gpl/Integration/InterruptDispatcher/incl/: intdispatch.h  intdispatch_mgmt.h
ltq_eip123_user_library_gpl/Integration/InterruptDispatcher/src/: c_intdispatch_umdevxs.h  intdispatch_umdevxs.c
ltq_eip123_user_library_gpl/Integration/OneTimeInit/incl/: sharedlibs_onetimeinit.h
ltq_eip123_user_library_gpl/Integration/OneTimeInit/src/: sharedlibs_onetimeinit_cm.c
ltq_eip123_user_library_gpl/Integration/WorkerThread/incl/: workerthread.h
ltq_eip123_user_library_gpl/Integration/WorkerThread/src/: workerthread_linuxusermode.c  (+2 more)
ltq_eip123_user_library_gpl/m4/: enable_debug_opt.m4  enable_target_opt.m4  enable_yes_no_opt.m4  endian_flags.m4
ltq_eip123_user_library_gpl/meta/: DDK-123.env  DDK-123.mk  DDK-123.subdir  DDK.features  README
(+74 files in other folders)
